--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,11 @@
 
 li {
     list-style: none;
+    border-bottom: 1px solid rgb(196, 196, 196);
+}
+ul,ol {
     border: 1px solid rgb(196, 196, 196);
+    border-radius: 5px;
 }
 
 .spaceInLi {
