--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,9 @@ li {
     list-style: none;
     border-bottom: 1px solid rgb(196, 196, 196);
 }
-ul,ol {
+
+ul,
+ol {
     border: 1px solid rgb(196, 196, 196);
     border-radius: 5px;
 }
@@ -24,7 +26,7 @@ option {
     background-color: rgb(44, 42, 42);
 }
 
-a {
+.enlace {
     text-decoration-line: underline;
     color: rgb(0, 76, 255);
 }
